--- a/subprojects/wrapper/wrapper.gradle
+++ b/subprojects/wrapper/wrapper.gradle
@@ -25,15 +25,13 @@ dependencies {
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
 }
 
-def generatedResourcesDir = "$buildDir/generated-resources/main"
-sourceSets.main.output.dir generatedResourcesDir, buildBy: 'wrapperJar'
-
 task wrapperJar(type: Jar) {
     dependsOn compileJava, processResources
     from sourceSets.main.output.classesDir
     include 'org/gradle/wrapper/**'
 
     archiveName = 'gradle-wrapper.jar'
-    destinationDir = new File(generatedResourcesDir)
+    destinationDir = generatedResourcesDir
     manifest.mainAttributes("Main-Class": 'org.gradle.wrapper.GradleWrapperMain')
 }
+sourceSets.main.output.dir generatedResourcesDir, buildBy: wrapperJar
