Spilt out “native” plugin from the “cpp” plugin with basic infrastructure for modelling any kind of “native” software project.
There is some awkwardness in naming due to “native” being a reserved word in Java that will have to be resolved somehow. At the moment “nativ” is used as a substitute where this is an issue.

--- a/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
+++ b/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
@@ -3,7 +3,7 @@ allprojects {
 }
 
 project(":lib") {
-    cpp {
+    nativ {
         binaries {
             main {
                 spec {
@@ -15,19 +15,19 @@ project(":lib") {
 }
 
 project(":exe") {
-    cpp {
+    nativ {
         sourceSets {
             main {
                 headers {
                     // Include the headers from the lib project
-                    srcDir project(":lib").cpp.sourceSets.main.headers
+                    srcDir project(":lib").nativ.sourceSets.main.headers
                 }
             }
         }
         binaries {
             main {
                 spec {
-                    source project(":lib").cpp.binaries.main.spec
+                    source project(":lib").nativ.binaries.main.spec
                 }
             }
         }
