Made the binaries container a top level element, and started moving towards strongly type source sets.

--- a/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
+++ b/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
@@ -3,32 +3,30 @@ allprojects {
 }
 
 project(":lib") {
-    nativ {
-        binaries {
-            main {
-                spec {
-                    sharedLibrary() // configure to build library
-                }
+    binaries {
+        main {
+            spec {
+                sharedLibrary() // configure to build library
             }
         }
     }
 }
 
 project(":exe") {
-    nativ {
+    cpp {
         sourceSets {
             main {
                 headers {
                     // Include the headers from the lib project
-                    srcDir project(":lib").nativ.sourceSets.main.headers
+                    srcDir project(":lib").cpp.sourceSets.main.headers
                 }
             }
         }
-        binaries {
-            main {
-                spec {
-                    source project(":lib").nativ.binaries.main.spec
-                }
+    }
+    binaries {
+        main {
+            spec {
+                source project(":lib").binaries.main.spec
             }
         }
     }
