Separated exes and libs into separate types and containers and introduced some project convention plugins that orientate the project towards building either an exe or a lib.

--- a/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
+++ b/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
@@ -1,18 +1,11 @@
-allprojects {
-    apply plugin: 'cpp'
-}
-
 project(":lib") {
-    binaries {
-        main {
-            spec {
-                sharedLibrary() // configure to build library
-            }
-        }
-    }
+    apply plugin: "cpp-lib"
+    
+    libraries.main.spec.sharedLibrary()
 }
 
 project(":exe") {
+    apply plugin: "cpp-exe"
     cpp {
         sourceSets {
             main {
@@ -23,10 +16,10 @@ project(":exe") {
             }
         }
     }
-    binaries {
+    executables {
         main {
             spec {
-                source project(":lib").binaries.main.spec
+                source project(":lib").libraries.main.spec
             }
         }
     }
