Added a collection of Library objects to CppSourceSet, which enables much more automatic wiring when using CompileSpec.from(CppSourceSet).

--- a/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
+++ b/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
@@ -1,28 +1,10 @@
 project(":lib") {
     apply plugin: "cpp-lib"
-    
-    libraries.main.spec.sharedLibrary()
 }
 
 project(":exe") {
     apply plugin: "cpp-exe"
-    cpp {
-        sourceSets {
-            main {
-                headers {
-                    // Include the headers from the lib project
-                    srcDir project(":lib").cpp.sourceSets.main.headers
-                }
-            }
-        }
-    }
-    executables {
-        main {
-            spec {
-                source project(":lib").libraries.main.spec
-            }
-        }
-    }
+    cpp.sourceSets.main.libs << project(":lib").libraries.main
 }
 
 task build(dependsOn: project(":exe").compileMain)
