--- a/gradle/idea.gradle
+++ b/gradle/idea.gradle
@@ -26,7 +26,7 @@ idea {
 
     project {
         wildcards += ['?*.gradle']
-        javaVersion = '1.6'
+        jdkName = '1.6'
         languageLevel = '1.5'
 
         ipr {
