Configured some projects not to download sources for idea. The reason is the regression that popped up. If sources are not found idea task fails. We had that exact problem ~2 months so it seems it resurfaced again. Also we need coverage for this problem. I also noticed that idea task is significantly slower (3 mins instead of usual 30 secs). It something we had a problem in past as well and previously it was related to the downloadSources problem (I think:). It feels that it is still better to upgrade the wrapper to milestone-4 even though there a couple of issues to fix.

--- a/subprojects/maven/maven.gradle
+++ b/subprojects/maven/maven.gradle
@@ -22,6 +22,9 @@ configurations {
     compile.exclude module: "netty"
 }
 
+//TODO SF - only temporary until issue is fixed
+idea.module.downloadSources = false
+
 dependencies {
     groovy libraries.groovy_depends
 
