--- a/subprojects/core-impl/core-impl.gradle
+++ b/subprojects/core-impl/core-impl.gradle
@@ -1,5 +1,8 @@
 apply plugin: "groovy"
 
+//TODO SF - only temporary until issue is fixed
+idea.module.downloadSources = false
+
 dependencies {
     groovy libraries.groovy_depends
 
