--- a/subprojects/cpp/cpp.gradle
+++ b/subprojects/cpp/cpp.gradle
@@ -18,7 +18,7 @@ apply from: "$rootDir/gradle/integTest.gradle"
 
 dependencies {
     groovy libraries.groovy_depends
-    compile project(':core'), project(":plugins")
+    compile project(':core'), project(":plugins"), project(":ide")
     
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
