--- a/subprojects/integ-test/src/integTest/resources/org/gradle/integtests/maven/MavenDependencyResolutionIntegrationTest/canResolveDependenciesFromMultipleMavenRepositories/build.gradle
+++ b/subprojects/integ-test/src/integTest/resources/org/gradle/integtests/maven/MavenDependencyResolutionIntegrationTest/canResolveDependenciesFromMultipleMavenRepositories/build.gradle
@@ -63,7 +63,9 @@ configurations {
 }
 
 repositories {
-    mavenRepo(urls: ['http://gradle.sourceforge.net/repository/', 'http://gradle.sourceforge.net/otherrepo/']).allownomd = false
+    mavenRepo(urls: ['http://gradle.sourceforge.net/repository/', 'http://gradle.sourceforge.net/otherrepo/']) {
+        descriptor="required"
+    }
     mavenRepo(urls: 'http://gradle.sourceforge.net/otherrepo/')
     mavenCentral()
 }
