--- a/subprojects/cpp/cpp.gradle
+++ b/subprojects/cpp/cpp.gradle
@@ -21,7 +21,7 @@ dependencies {
     compile project(':core'), project(":plugins"), project(":ide")
     
     testCompile project(path: ':core', configuration: 'testFixtures')
-    testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
+    testRuntime project(path: ':core', configuration: 'testFixturesRuntime'), project(":maven")
     integTestCompile project(path: ':core', configuration: 'integTestFixtures')
 }
 
