Remove the test user home dir before running int tests, in an attempt to make them more stable.

--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -50,6 +50,8 @@ integTestTasks.all {
         systemProperties['integTest.gradleHomeDir'] = integTestImageDir.absolutePath
         systemProperties['integTest.gradleUserHomeDir'] = integTestUserDir.absolutePath
         systemProperties['integTest.samplesdir'] = project(":docs").samplesDir.absolutePath
+        // TODO - remove this once wharf is behaving itself
+        delete "$integTestUserDir/worker-1"
     }
 }
 
