Renamed the 'current release' -> 'current stable' so that it sticks better to the current situation with M4 and M3 :)

--- a/website/build.gradle
+++ b/website/build.gradle
@@ -343,7 +343,7 @@ class Release {
 
 class CurrentRelease extends Release {
     def String getDisplayName() {
-        return "Gradle $version (current release)"
+        return "Gradle $version (current stable)"
     }
 
     def String getDocsUrl() {
