Added same quick and dirty publication support from cpp lib plugin to cpp exe plugin.

--- a/subprojects/docs/src/samples/cpp/dependencies/build.gradle
+++ b/subprojects/docs/src/samples/cpp/dependencies/build.gradle
@@ -16,7 +16,10 @@ project(":lib") {
 project(":exe") {
     apply plugin: "cpp-exe"
     apply plugin: "eclipse-cdt"
+    apply plugin: "maven"
 
+    version = 1.0
+    
     repositories {
         mavenRepo urls: "file://${new File(project(":lib").buildDir, "repo").absolutePath}"
     }
@@ -25,6 +28,14 @@ project(":exe") {
         sourceSets {
             main {
                 dependency group: "dependencies", name: "lib", version: "1.0"
+            }
+        }
+    }
+    
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository(url: uri("${buildDir}/repo"))
             }
         }
     }
