--- a/build.gradle
+++ b/build.gradle
@@ -285,7 +285,7 @@ def guessMaxForks() {
     return Math.max(2, (int) (processors / 2))
 }
 
-task testedDists(dependsOn: [assemble, check, integTests])
+task testedDists(dependsOn: [assemble, check])
 
 task nightlyBuild(dependsOn: [clean, testedDists, ':docs:uploadDocs'])
 
