added jcip.annotations library

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ libraries = [
         ivy: 'org.apache.ivy:ivy:2.2.0@jar',
         jaxen: 'jaxen:jaxen:1.1@jar',
         slf4j_api: 'org.slf4j:slf4j-api:1.6.1@jar',
+        jcip: "net.jcip:jcip-annotations:1.0",
         jcl_to_slf4j: 'org.slf4j:jcl-over-slf4j:1.6.1@jar',
         jul_to_slf4j: 'org.slf4j:jul-to-slf4j:1.6.1@jar',
         log4j_to_slf4j: 'org.slf4j:log4j-over-slf4j:1.6.1@jar',
@@ -352,7 +353,7 @@ gradle.taskGraph.whenReady {graph ->
 
 // A marker task which causes the release version to be used when it is present in the task graph
 task releaseVersion
-//TODO SF - this task name is inconsitent because other releaseXxx tasks actually upload some content somewhere. Should be called something like 'markReleaseVersion'
+//TODO SF - this task name is inconsistent because other releaseXxx tasks actually upload some content somewhere. Should be called something like 'markReleaseVersion'
 
 def tagNow() {
     def git = new Git(project)
@@ -371,7 +372,7 @@ task testedTag(dependsOn: testedDists) << {
 
 task releaseArtifacts {
     description = 'Builds the release artifacts'
-    //TODO SF - this task name is inconsitent because other releaseXxx tasks actually upload some content somewhere. Should be called something like 'buildReleaseArtifacts'
+    //TODO SF - this task name is inconsistent because other releaseXxx tasks actually upload some content somewhere. Should be called something like 'buildReleaseArtifacts'
     group = 'release'
     dependsOn releaseVersion, assemble, ':docs:websiteDocs'
 }
