turned sonarProject {} into sonar.project {}; renamed task sonar to sonarAnalyze; revitalized SonarPluginTest; polishing

--- a/subprojects/docs/src/samples/sonar/build.gradle
+++ b/subprojects/docs/src/samples/sonar/build.gradle
@@ -18,6 +18,14 @@ sonar {
 }
 // END SNIPPET connection-settings
 
+// START SNIPPET project-settings
+sonar {
+    project {
+        coberturaReportPath = "$buildDir/cobertura.xml"
+    }
+}
+// END SNIPPET project-settings
+
 repositories {
     mavenCentral()
 }
