--- a/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
+++ b/subprojects/docs/src/samples/cpp/exewithlib/build.gradle
@@ -1,10 +1,18 @@
+// START SNIPPET project-dependencies
 project(":lib") {
     apply plugin: "cpp-lib"
 }
 
 project(":exe") {
     apply plugin: "cpp-exe"
-    cpp.sourceSets.main.libs << project(":lib").libraries.main
+    cpp {
+        sourceSets {
+            main {
+                libs << project(":lib").libraries.main
+            }
+        }
+    }
 }
+// END SNIPPET project-dependencies
 
 task build(dependsOn: project(":exe").compileMain)
