QuickFix: Added additional declaration of archivesBaseName (in correct location), to fix error in Cpp dependency sample

--- a/subprojects/docs/src/samples/cpp/dependencies/build.gradle
+++ b/subprojects/docs/src/samples/cpp/dependencies/build.gradle
@@ -1,4 +1,6 @@
 project(":lib") {
+    archivesBaseName = "some-lib"
+
     // START SNIPPET use-plugin-lib
     apply plugin: "cpp-lib"
     // END SNIPPET use-plugin-lib
