Moved core/src/test and core/src/integTest into new “testing” module which contains all fixtures/utilities for testing support.
This module is not part of the Gradle distribution. See the build script for this module for more info.

--- a/build.gradle
+++ b/build.gradle
@@ -410,7 +410,7 @@ def publishedProjects() {
 }
 
 def runtimeProjects() {
-    groovyProjects() - pluginProjects() - [project(':integTest'), project(':coreImpl')]
+    groovyProjects() - pluginProjects() - [project(':integTest'), project(':coreImpl'), project(":testing")]
 }
 
 def pluginProjects() {
