--- a/subprojects/announce/announce.gradle
+++ b/subprojects/announce/announce.gradle
@@ -20,6 +20,5 @@ dependencies {
     compile project(':core')
     compile project(':plugins')
 
-    testCompile project(path: ':core', configuration: 'testFixtures')
-    testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
+    testCompile project(":testing")
 }
