--- a/subprojects/maven/maven.gradle
+++ b/subprojects/maven/maven.gradle
@@ -43,9 +43,7 @@ dependencies {
     compile "org.sonatype.pmaven:pmaven-groovy:0.8-20100325@jar"
     compile "org.codehaus.plexus:plexus-component-annotations:1.5.2@jar"
 
-    testCompile project(path: ':core', configuration: 'testFixtures')
-    testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
-    testCompile project(path: ':core', configuration: 'integTestFixturesRuntime')
+    testCompile project(":testing")
 }
 
 test {
