--- a/subprojects/open-api/open-api.gradle
+++ b/subprojects/open-api/open-api.gradle
@@ -4,10 +4,7 @@ apply from: "$rootDir/gradle/integTest.gradle"
 dependencies {
     groovy libraries.groovy_depends
 
-    testCompile project(path: ':core', configuration: 'testFixtures')
-    testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
-
-    integTestCompile project(path: ':core', configuration: 'integTestFixtures')
+    testCompile project(":testing")
 
     integTestCompile libraries.slf4j_api, libraries.commons_lang
 }
