--- a/subprojects/scala/scala.gradle
+++ b/subprojects/scala/scala.gradle
@@ -19,10 +19,7 @@ dependencies {
     compile project(':core')
     compile project(':plugins')
 
-    testCompile project(path: ':core', configuration: 'testFixtures')
-    testCompile project(path: ':plugins', configuration: 'testFixtures')
-    testCompile libraries.slf4j_api
-    testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
+    testCompile project(":testing"), libraries.slf4j_api
 }
 
 
