--- a/subprojects/wrapper/wrapper.gradle
+++ b/subprojects/wrapper/wrapper.gradle
@@ -22,7 +22,5 @@ configurations {
 dependencies {
     groovy libraries.groovy_depends
 
-    testCompile libraries.ant
-    testCompile project(path: ':core', configuration: 'testFixtures')
-    testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
+    testCompile project(":testing"), libraries.ant
 }
