Introduced a build convention of projects prefixed with “internal-” being regarded as not for public consumption.
Right now, this means not including them in the Gradle distribution and not requiring Javadocs like public projects.

The “testing” project has been renamed to “testingInternal” under this new convention.

--- a/build.gradle
+++ b/build.gradle
@@ -409,8 +409,12 @@ def publishedProjects() {
     [project(':core'), project(':toolingApi'), project(':wrapper')]
 }
 
+def internalProjects() {
+    subprojects.findAll { it.name.startsWith("internal-") } + [project(":integTest")]
+}
+
 def runtimeProjects() {
-    groovyProjects() - pluginProjects() - [project(':integTest'), project(':coreImpl'), project(":testing")]
+    groovyProjects() - pluginProjects() - internalProjects() - [project(':coreImpl')]
 }
 
 def pluginProjects() {
