--- a/settings.gradle
+++ b/settings.gradle
@@ -15,7 +15,6 @@
  */
 include 'core'
 include 'coreImpl'
-include 'testing'
 include 'wrapper'
 include 'launcher'
 include 'plugins'
@@ -36,6 +35,7 @@ include 'sonar'
 include 'signing'
 include 'cpp'
 include 'ear'
+include 'internalTesting'
 
 rootProject.name = 'gradle'
 rootProject.children.each {project ->
