--- a/subprojects/jetty/jetty.gradle
+++ b/subprojects/jetty/jetty.gradle
@@ -30,5 +30,5 @@ dependencies {
             "org.mortbay.jetty:jetty-annotations:6.1.25@jar",
             "org.apache.geronimo.specs:geronimo-annotation_1.0_spec:1.0@jar"
 
-    testCompile project(":testing")
+    testCompile project(":internalTesting")
 }
