--- a/subprojects/maven/maven.gradle
+++ b/subprojects/maven/maven.gradle
@@ -43,7 +43,7 @@ dependencies {
     compile "org.sonatype.pmaven:pmaven-groovy:0.8-20100325@jar"
     compile "org.codehaus.plexus:plexus-component-annotations:1.5.2@jar"
 
-    testCompile project(":testing")
+    testCompile project(":internalTesting")
 }
 
 test {
