--- a/subprojects/open-api/open-api.gradle
+++ b/subprojects/open-api/open-api.gradle
@@ -4,7 +4,7 @@ apply from: "$rootDir/gradle/integTest.gradle"
 dependencies {
     groovy libraries.groovy_depends
 
-    testCompile project(":testing")
+    testCompile project(":internalTesting")
 
     integTestCompile libraries.slf4j_api, libraries.commons_lang
 }
