--- a/subprojects/signing/signing.gradle
+++ b/subprojects/signing/signing.gradle
@@ -22,6 +22,6 @@ dependencies {
     compile "org.bouncycastle:bcpg-jdk15:1.45"
     compile project(":plugins")
     
-    testCompile project(":testing")
+    testCompile project(":internalTesting")
     testRuntime project(":maven")
 }
