--- a/build.gradle
+++ b/build.gradle
@@ -410,7 +410,7 @@ def publishedProjects() {
 }
 
 def internalProjects() {
-    subprojects.findAll { it.name.startsWith("internal-") } + [project(":integTest")]
+    subprojects.findAll { it.name.startsWith("internal") } + [project(":integTest")]
 }
 
 def runtimeProjects() {
